CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(wtfkb)

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE("XCB" REQUIRED "xcb")
INCLUDE_DIRECTORIES(${XCB_INCLUDE_DIRS})

PKG_SEARCH_MODULE("XCB_XKB" REQUIRED "xcb-xkb")
INCLUDE_DIRECTORIES(${XCB_XKB_INCLUDE_DIRS})

PKG_SEARCH_MODULE("XKBCOMMON" REQUIRED "xkbcommon-x11")
INCLUDE_DIRECTORIES(${XKBCOMMON_INCLUDE_DIRS})

ADD_EXECUTABLE(wtfkb main.c)
TARGET_LINK_LIBRARIES(wtfkb ${X11_LIBRARIES} ${XCB_LIBRARIES} ${XCB_XKB_LIBRARIES} ${XKBCOMMON_LIBRARIES})

INSTALL(
	TARGETS wtfkb
	RUNTIME DESTINATION "bin"
)
